--- a/0802_TIL.md
+++ b/0802_TIL.md
@@ -87,7 +87,7 @@ for i in range(len(arr)): # 행
 ```python
 # 델타를 이용한 2차 List 탐색 예시
 
-dx = [0, 0, -1, 1] # 순서대로 상하좌우일 때, x 델타값
+dx = [0, 0, -1, 1] # 순서대로 상하좌우일 때, x 델타.값
 dy = [1, -1, 0, 0] # "                  , y 델타값
 
 # len(arr) = n, 행 길이
