--- a/0805_TIL.md
+++ b/0805_TIL.md
@@ -54,13 +54,13 @@
 
 ---
 
-내용 목차
+<목차>
 
 1. 배열: 2차 배열
 2. 부분집합 생성
-3. Binary Search(이진 탐색)
-4. Selection Algorithm(셀렉션 알고리즘)
-5. Selection Sort(선택 정렬)
+3. Binary Search(이진 탐색): 자료가 정렬된 상태에서 검색 범위를 매 시도마다 반으로 줄여가면서 탐색하는 방법.
+4. Selection Algorithm(셀렉션 알고리즘): k번째로 작은 원소를 찾는 알고리즘. Big `O(kn)`의 시간 복잡도를 가진다.
+5. Selection Sort(선택 정렬): 셀렉션 알고리즘을 전체에 적용, 모든 값을 오름차순 or 내림차순으로 정렬하는 알고리즘. Big `O(n^2)`의 시간 복잡도를 가진다.
 
 
 
