[add] 0814_TIL-django_basic

--- a/0814_TIL.md
+++ b/0814_TIL.md
@@ -2,6 +2,12 @@
 
 
 
+- vscode에서 가상환경 activation 방법.
+  - `source C:/Anaconda3/Scripts/activate`
+  - 위 명령어 실행 시 (base)로 가상환경 활성화.
+
+
+
 ## Dynamic Web vs Static Web
 
 - Dynamic Web
@@ -50,8 +56,8 @@
 - 프로젝트 생성 시 주로 활용할 파일
   - `setting.py`
   - `urls.py`
-- Tip
-  - `python manage.py startapp {앱이름}`: 앱 시작, 앱 이름은 항상 '복수형'으로 작성한다.
+- 앱 만들기
+  - `python manage.py startapp {앱이름}`: 앱 시작, 앱 이름은 항상 '복수형'으로 작성한다. ex) article__s__
 
 - `articles` 폴더
   - `models.py`: MTV에서 Model 부분을 활용할 파일이다.
@@ -153,3 +159,17 @@ path('hello/<str:name>/', views.hello),
 - 장고는 템플릿 시스템이 **표현**을 제어하는 도구이자 표현에 관련된 로직일뿐이라고 생각한다.
 - 템플릿 시스템에서는 이러한 기본 목표를 넘어서는 기능을 지원해서는 안된다.
 - template은 표현을 하고, 표현에 필요한 데이터는 views에서 가져온다. 
+
+
+
+
+
+# 전체적인 흐름
+
+- 프로젝트 생성: `django-admin startproject {프로젝트 이름: 언더바}`
+- 앱 생성: `python manage.py startapp {앱 이름: 복수형}`
+- 앱 등록: app을 생성한 후에 `settings.py`에 app 등록.
+- url 생성: `urls.py`에 `path` 작성.
+- T 단계: `views.py`에 해당 url의 동작 방식 작성.
+- (해당 url 이름).html을 (app 이름)폴더의 `templates` 폴더에 만든다.
+- V 단계: 어떻게 `views.py`에 작성한 (url 이름)함수 안의 데이터를 표현할지 html(장고 파일, 문법)작성.
