--- a/0814_TIL.md
+++ b/0814_TIL.md
@@ -30,16 +30,14 @@
 - Python Web Framework
   - Web Framework: 웹 페이지를 개발하는 과정에서 겪는 어려움을 줄이는 것이 주 목적으로 어플리케이션 프레임워크의 일종이다.
   - 장고를 활용한 앱: Spotify, Dropbox, Instagram, Delivery Hero
-
 - Python으로 작성된 오픈소스 Web Application Framework로 **모델-뷰-컨트롤러 패턴**을 따르고 있다.
   - 모델-뷰-컨트롤러 패턴(기존은 MVC, Model/View/Controller 이지만 동일한 역할을 MTV로 부른다.)
   - MTV 패턴을 따른다. 기존의 MVC 방식과 유사하지만 조금 다른 방식을 따른다.
     - Model: 데이터 관리
     - Template: 인터페이스(화면)
     - View: 중간 관리(상호 동작)
-
 - 장고 예시(django는 어떻게 동작하는가?)
-- <img src="C:%5CUsers%5CYu%20JinWoo%5CAppData%5CRoaming%5CTypora%5Ctypora-user-images%5Cimage-20200814094808326.png" alt="image-20200814094808326" style="zoom:50%;" />
+- ![image-20200814112037317](0814_TIL.assets/image-20200814112037317.png)
 
 
 
